--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,30 +7,36 @@ edition = "2021"
 [dependencies]
 egui = "0.22.0"
 eframe = { version = "0.22.0", default-features = false, features = [
-    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
-    "default_fonts", # Embed the default egui fonts.
-    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
+    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
+    # "default_fonts", # Embed the default egui fonts.
+    "glow", # Use the glow rendering backend. Alternative: "wgpu".
+    # "persistence",   # Enable restoring app state when restarting the app.
 ] }
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
 
 df-client = { git = "https://github.com/zmtq05/df-rs" }
+poll-promise = { version = "0.2.0", features = ["tokio"] }
+tokio = { version = "1.28.2", features = ["rt-multi-thread", "parking_lot"] }
+egui_extras = { version = "0.22.0", features = ["image"] }
+image = { version = "0.24", features = ["png"] }
+thousands = "0.2.0"
+egui-phosphor = "0.1.1"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tracing-subscriber = "0.3"
 
-# web:
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-console_error_panic_hook = "0.1.6"
-tracing-wasm = "0.2"
-wasm-bindgen-futures = "0.4"
+# # web:
+# [target.'cfg(target_arch = "wasm32")'.dependencies]
+# console_error_panic_hook = "0.1.6"
+# tracing-wasm = "0.2"
+# wasm-bindgen-futures = "0.4"
 
 
-[profile.release]
-opt-level = 2 # fast and small wasm
+# [profile.release]
+# opt-level = 2 # fast and small wasm
 
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
