--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,18 @@ eframe = { version = "0.22.0", default-features = false, features = [
 serde = { version = "1", features = ["derive"] }
 
 df-client = { git = "https://github.com/zmtq05/df-rs" }
-poll-promise = { version = "0.2.0", features = ["tokio"] }
 tokio = { version = "1.28.2", features = ["rt-multi-thread", "parking_lot"] }
 egui_extras = { version = "0.22.0", features = ["image"] }
 image = { version = "0.24", features = ["png"] }
 thousands = "0.2.0"
 egui-phosphor = "0.1.1"
+
+[dependencies.poll-promise]
+# 0.2 version has bug in release build
+# https://github.com/EmbarkStudios/poll-promise/issues/18
+git = "https://github.com/EmbarkStudios/poll-promise"
+rev = "refs/pull/14/head"
+features = ["tokio"]
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
