--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,7 +2,8 @@ name: Release
 
 on:
   push:
-    branches: [ "master" ]
+    tags:
+    - "[0-9]+.[0-9]+.[0-9]+"
 
 env:
   CARGO_TERM_COLOR: always
@@ -20,6 +21,7 @@ jobs:
         with:
           RUSTTARGET: x86_64-pc-windows-gnu
           UPLOAD_MODE: release
+          TOOLCHAIN_VERSION: stable
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
